# token_entropy_encoder

./: .gitignore  .npmignore  Cargo.toml  README.md  build.rs  build.sh  build_wasm.sh  example.js  package-lock.json  package.json  test_proxy_server.js
examples/: huffman_basic.rs
node-examples/: BENCHMARKS.md  OPTIMIZED_API.md  QUICKSTART.md  README.md  benchmark_analyzer.js  benchmark_client.js  benchmark_server.js  benchmark_smoke_test.js  client.js  decode_example.js  example.js  full_pipeline.js  huffmanClient.js  huffman_benchmark.js  huffman_comparison.js  huffman_vs_json.js  investigate_tokens.js  mockProxyServer.js  optimized_pipeline.js  package-lock.json  package.json  practical_example.js  proxy_server.js  run_benchmarks.sh  server.js  sseClient.js  streaming_example.js  test.js
pkg/: token_entropy_encoder.d.ts  token_entropy_encoder.js  token_entropy_encoder_bg.wasm.d.ts
scripts/: build_decode_pack.py  get_pmf_from_llama.py  sample_pmf_from_llm.py  visualize_pmf.py
scripts/data/: prompts.txt
src/: decoder.rs  lib.rs  token_compressor.rs  vocab_size.rs  wasm.rs
src/huffman/: generator.rs  mod.rs  priority_node.rs  trie_node.rs
src/huffman/tests/: generator_tests.rs  mod.rs
src/server/: mod.rs
src/vocab/: mod.rs
vscode-extension/: LICENSE  README.md
vscode-extension/src/: extension.ts  huffmanClient.ts  sseClient.ts
vscode-extension/test/: benchmark.ts  comparison.benchmark.ts  huffmanClient.test.ts  mockProxyServer.ts
