[package]
name = "token_entropy_encoder"
version = "0.1.0"
edition = "2024"

[build-dependencies]
dotenvy = "0.15.7"

[dependencies]
tokenizers = '*'
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
async-stream = "0.3"
dotenvy = "0.15.7"
anyhow = "1.0.101"
